--- a/resources/css/HeaderFooter.css
+++ b/resources/css/HeaderFooter.css
@@ -1,9 +1,4 @@
-/*Iconos diseñados por <a href="https://creativemarket.com/Becris" title="Becris">Becris</a> from <a href="https://www.flaticon.es/" title="Flaticon"> www.flaticon.es</a>*/
-/*Este css modifica solo el footer y el header, los cuales dan estilo a Footer.php y header.php respectivamente*/
-*{
-    margin: 0;
-    padding: 0;
-}
+@import url("Colors.css");
 /*nav bar*/
 #Ulheader {
     list-style-type: none;
@@ -70,7 +65,7 @@
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: var(--background-color);
+    background-color: blue;
     padding: 1%;
     text-align: center;
 }
