--- a/resources/css/Main.css
+++ b/resources/css/Main.css
@@ -1,12 +1,76 @@
-/*Este es el Css principal, aqui se importan todos los demas css creados, y se modifican los necesarios, solo este css es llamado en index.php*/
-@import url("ChanTemplate.css");
+@import url("Last.css");
+@import url("HeaderFooter.css");
 @import url("Upload.css");
-@import url("FootHead.css");
-@import url("LastPost.css");
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
+/*texto*/
+h1{
+    font-size: 3em;
+    letter-spacing: 10px;
+    text-align: center;
+}
+h2{
+    letter-spacing: 10px;
+    font-size: 2em;
+    text-align: center;
+}
+h3{
+    letter-spacing: 3px;
+    display: inline-block;
+}
+/*fin texto*/
+/*clases*/
+/*botones*/
+.boton{
+    display: inline-block;
+    padding: 15px 25px;
+    font-size: 15px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: var(--text-color1);
+    background-color: var(--BtnBackground-color);
+    border: 1px solid var(--BtnBorder-color);
+    border-radius: 15px;
+    box-shadow: 0 9px var(--BtnBorder-color);
+  }
+  .boton:hover{
+    transition: 0.5s;
+    background-color: var(--hover-color);
+  }
+  .boton:active {
+    transition: 0.2s;
+    background-color: var(--hover-color);
+    box-shadow: 0 5px var(--BtnBorder-color);
+    transform: translateY(4px);
+  }
+/*fin botones*/
+
+/*fin clases*/
+/*elementos*/
+main{
+  border: 2px solid var(--border-color);
+  margin: 1rem;
+  padding: 1rem;
+  overflow: hidden;
+}
+header{
+  background-color: var(--Background-color);
+  margin: 1rem;
+  padding: 1rem;
+  border: 2px solid var(--border-color);
+}
+body{
+  background-color: var(--Background-color);
+  margin: 1rem;
+  padding: 1rem;
+  border: 2px solid var(--border-color);
+}
+/*fin elementos*/
 /*Elementos completos a partir de un php*/
 /*header*/
 header{
@@ -27,7 +91,7 @@ header{
 #IndexMain{
   background-color: var(--Background-color);
   margin: 1rem;
-  padding: 1rem;
+  padding: 0rem;
   border: 2px solid var(--border-color);
 }
 /*fin main*/
@@ -47,8 +111,8 @@ hr {
 }
 /*sacar esto a otro css para topics*/
 img{
-  width:50px;
-  height:50px;
+  width:200px;
+  height:200px;
   } 
 
 /*elementos individuales fin*/
