Implemento de Bootstrap
Se instalo bootstrap al proyecto para darle un diseño más facilmente  adaptable.

--- a/resources/css/Colors.css
+++ b/resources/css/Colors.css
@@ -3,7 +3,7 @@
     --second-color: #67b8fa;
     --third-color: #3f3f3f;
     --BtnBorder-color: #c4c4c4;
-    --BtnBackground-color: #096350;
+    --BtnBackground-color: #6c6c;
 	--background-color: #3f3f3f;
     --border-color: #ccc;
     --text-color1: #fcfcfc;
