Sistema Likes y contador de comentarios
Se agregro un sistema de likes, pero hay una falla porque el JS "likes.js" no se ejecuta y por tanto los likes en la BD tampoco.
El contador de comentarios funciona bien, falta ponerlo en general.

--- a/resources/style/main.css
+++ b/resources/style/main.css
@@ -1,3 +1,4 @@
+@@ -1,232 +0,0 @@
 /*Edita los estilos de los formularios*/
 /*//////////////////////////////////////////////////////////////////
 [ RESTYLE TAG ]*/
@@ -227,6 +228,5 @@ textarea.input100 {
     padding: 92px 15px 88px 15px;
   }
 }
-
 
 
