Admin configs & colors
Se agrego el poder eliminiar publicaciones desde la pagina de admin y se añadio la clase UDG donde en colors.css donde se utilizan los colores oficiales para el C.U.

--- a/resources/style/Colors.css
+++ b/resources/style/Colors.css
@@ -51,3 +51,8 @@
     display: block;
   }
   
+  .UDG{
+    background-image: url("../img/icons/degradado.jpg");
+    background-color: 	#CD5700 ;
+    background-position: center; /* Center the image */
+  }
