--- a/resources/style/main.css
+++ b/resources/style/main.css
@@ -1,4 +1,4 @@
-@@ -1,232 +0,0 @@
+
 /*Edita los estilos de los formularios*/
 /*//////////////////////////////////////////////////////////////////
 [ RESTYLE TAG ]*/
@@ -7,12 +7,12 @@
 	margin: 0px; 
 	padding: 0px; 
   box-sizing: border-box;
-  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
 }
 
 body, html {
   height: 100%;
-  background: "resources/img/icons/FORMAS.jpg";
+  /*background: "resources/img/icons/FORMAS.jpg";*/
 }
 
 /*---------------------------------------------*/
