Agregada pagina para busquedas
Pagina de resultados de busqueda creada, falta corregir direccionamiento del header dentro de la pagina

--- a/resources/style/Colors.css
+++ b/resources/style/Colors.css
@@ -46,7 +46,7 @@
   }
   
   .UDG{
-    background-image: url("../img/icons/degradado.jpg");
+    background-image: url("../img/icons/degradado");
     background-color: 	#CD5700 ;
     background-position: center; /* Center the image */
   }
