--- a/resources/style/main.css
+++ b/resources/style/main.css
@@ -7,7 +7,7 @@
 	margin: 0px; 
 	padding: 0px; 
   box-sizing: border-box;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: "Open Sans", "lucida grande", tahoma, verdana, arial, sans-serif;
 }
 
 body, html {
