--- a/resources/style/Colors.css
+++ b/resources/style/Colors.css
@@ -1,6 +1,6 @@
 :root {
     --main-color: #cd5700; /*Color Oficial UDG Cualtos*/
-    --second-color: #67b8fa;
+    --ok-color: #179915;
     --third-color: #3f3f3f;
 	  --background-color: #dddddd;
     
@@ -13,6 +13,12 @@
   .alfondo{
     background-color: var(--background-color);
   }
+  .registros{
+    background-color: var(--background-color);
+    background-image: url("../img/icons/circuitos.png");
+    background-repeat: no-repeat;
+    background-position: center;
+  }
   /*----------barra id hilo---------------*/
   .dot {
     text-align: center;
@@ -21,13 +27,39 @@
     width: 20px;
     background-color: #bbb;
   }
+  
+  
+  .carru-image{
+      background-size: cover;
+  }
+  /*-------------HEADER/FOOTER---------------*/
+  .UDG{
+    /*background-image: url("../img/icons/degradado");*/
+    background-color: var(--main-color) !important;
+    background-image: url("../img/icons/circuitos.png");
+    background-repeat: no-repeat;
+    background-position: top;
+    /*background: rgb(255,242,233);
+    background:#cd5700;*/
+  }
+  .UDG2{
+    background-color: var(--main-color) !important;
+    background-image: url("../img/icons/circuitos.png");
+    background-repeat: no-repeat;
+    background-position: bottom;
+  }
+
+  /*-------------botones---------------*/
   /*botones*/
   .btn-file {
-    position: relative;
-    overflow: hidden;
+    background-color: white;
+    cursor: pointer;
+    transition: ease-out 0.4s;
   }
   .btn-file:hover {
-	cursor: pointer;
+  color: white;
+  background-color: grey;
+  transition: ease-out 0.4s;
 }
   .btn-file input[type=file] {
     position: absolute;
@@ -40,22 +72,9 @@
     filter: alpha(opacity=0);
     opacity: 0;
     outline: none;
-    background: #cd5700;
+    background: var(--main-color);
     cursor: inherit;
     display: block;
-  }
-  
-  .carru-image{
-      background-size: cover;
-  }
-  .UDG{
-    /*background-image: url("../img/icons/degradado");*/
-    /*background-color: 	#CD5700 ;*/
-    background: rgb(255,242,233);
-    background: linear-gradient(270deg, rgba(255,242,233,1) 0%, rgba(255,187,138,1) 20%, rgba(255,179,124,1) 40%, rgba(255,140,58,1) 60%, rgba(248,103,0,1) 80%, rgba(205,87,0,1) 100%); 
-  }
-  .UDG2{
-    background: rgb(255,255,255);
   }
   .btn-like{
     /*background-color:red;*/
@@ -74,15 +93,34 @@
   .btn-comment:hover{
     color:lightskyblue;
   }
-  .btn-all{
-    border:5px;
-    border-color:red;
-    color: #F86700;
-    background-color: #F86700;
+  .btn-all {
+    background-color: var(--main-color) !important;
+    border:none;
     transition: ease-out 0.3s;
+    color: white;
+    
+}
+  .btn-all:hover {
+    transition: ease-out 0.3s;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   }
-  .btn-all:hover{
-    color:lightskyblue;
+  .btn-reg{
+    background-color: var(--main-color) !important;
+    box-shadow: inset 0 0 0 0 #c3d100;
+    transition: ease-out 0.4s;
+    border: none;
+    outline: none;
+  }
+  .btn-reg:hover {
+    box-shadow: inset 1000px 0 0 0 var(--ok-color);
+    cursor: pointer;
+    color:white;
+  }
+
+
+  #exampleModalScrollable{
+    transition: ease-out 0.4s;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   }
  
     
