--- a/resources/style/Colors.css
+++ b/resources/style/Colors.css
@@ -225,3 +225,31 @@
 /*Botón del modo oscuro*/
 
 
+
+/*profile*/
+
+.bg-black {
+  background: #000
+}
+
+.skill-block {
+  width: 30%
+}
+
+@media (min-width: 991px) and (max-width:1200px) {
+  .skill-block {
+      padding: 32px !important
+  }
+}
+
+@media (min-width: 1200px) {
+  .skill-block {
+      padding: 56px !important
+  }
+}
+
+body {
+  background-color: #eeeeee
+}
+
+
